# clean-architecture-rs

./: .gitignore  Cargo.toml  cargo.toml
src/application/: Cargo.toml
src/domain/: Cargo.toml
src/domain/src/: Readme.md  readme.md
src/domain/src/repositories/: README.md  Readme.md
src/infrastructure/: Cargo.toml
src/infrastructure/external_services/email/: Cargo.toml
src/infrastructure/external_services/email/src/: error.rs
src/interface/: Cargo.toml
