[package]
name = "email"
version = "0.1.0"
edition = "2024"

[dependencies]

lettre = { version = "0.11.19", features = [
    "tokio1-native-tls",
    "builder",
    "smtp-transport",

] }

# -- -- Workspace Dependencies
# -- Async
tokio = { workspace = true, features = ["full"] }
# -- Tracing
tracing.workspace = true
# -- Json
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# -- Others
dotenvy.workspace = true
derive_more = { workspace = true, features = ["from", "display"] }
